...
        self.register(table: self.formsListTable)
        self.formsListTable.dataSource = self.render
        self.formsListTable.backgroundColor = .tableBackgroundColor
    }

    private func addAccessibilityIdentifiers() {
        self.addFormButton.accessibilityIdentifier = "Add"
        self.formsListTable.accessibilityIdentifier = "FormsList"
    }

    @IBAction func addFormAction(_ sender: Any) {
        if let vc = FormDetailsViewController.getController() {
            vc.delegate = self
...
