...
        print("=======   FormDetailsViewController deinit   ========")
    }
    
    private func configureViews() {
        self.navigationController?.navigationBar.tintColor = UIColor.white
        let sendButton = UIBarButtonItem(title: "Send", style: .plain, target: self, action: #selector(sendAction))
        sendButton.accessibilityIdentifier = "SendButton"
        self.navigationItem.rightBarButtonItem = sendButton
        self.initalizeData()
        self.setupTableView()
        self.setupCollectionView()
    }
    
...
